--- a/合约风控.md
+++ b/合约风控.md
@@ -1,11 +1,15 @@
 # Web3-
 个人分享，如有错误，欢迎指正！联系邮箱：miaojiawei_work@163.com
 
+
 统一账户
 1. 根本目的：通过共享相同账户内不同类型的资金，降低交易风险。
 2. 分类：市面上每个交易所都有不同的统一账户体系，但大致可分为以下两种模式。
 - 跨币种保证金模式：不同账户内的资产将都会被换算成USD作为统一保证金。
-- 组合保证金模式：在跨币种保证金模式的基础上，会优先判断是否有对冲仓位，从而进一步释放维持保证金，让用户可以有更多的资金开更多的仓位。因为这里需要考虑不同的套利组成形成的对冲模型，所以组合保证金模式详细内容我会在将套利对冲模型梳理完之后再重构。
+- 组合保证金模式：在跨币种保证金模式的基础上，会优先判断是否有对冲仓位，从而进一步释放维持保证金，让用户可以有更多的资金开更多的仓位。
+//因为这里需要考虑不同的套利组成形成的对冲模型，所以组合保证金模式详细内容我会在将套利对冲模型梳理完之后再重构。
+
+
 
 仓位限制
 1. 业务逻辑：通过对市场侧和用户侧的限制，使有限的市场份额分配给不同VIP等级的用户。
@@ -16,43 +20,40 @@
 - 市场侧限制：对不同的Token设置不同的市场（当前交易所）最大可名义持仓数。
 例如：ETH市场最大可名义持仓1W个，此时已经名义持仓9999个，则下一个用户最多只能开仓1个ETH。
 
+
+
 强制清算
 1. 清算类型：
 - 全部清算：当清算条件触发后，按照当前最新价格清算全部仓位。
 - 部分清算：当清算条件触发后，按照当前最新价格只清算部分仓位，使账户权益率 > MMR。
   业务逻辑：根据MMR的阶梯规则，当仓位越大时，MMR即越大，仓位越小时，MMR即越小，所以当清算条件触发时仅需清算部分仓位，直至MMR低于当前的账户权益率。
   计算方式：Qcurrent - Qtarget。
-Qcurrent ：当前的持仓数量（或名义价值）。
-Qtarget：第一档位的最大持仓数量（或名义价值）。
+  Qcurrent ：当前的持仓数量（或名义价值）。
+  Qtarget：第一档位的最大持仓数量（或名义价值）。
 2. 触发方案：
 - 方案一：清算价格
   触发条件：当标记价格、最新价格均 <= 清算价格。
-需要注意：清算价格触发仅作为一种理论性“可行性”方案，实际没有任何一个场景会采用清算价格做触发条件，因为只要在多仓的情况下，每个仓位都会因为其它仓位的盈亏以及资金费率等因素导致清算价格发生变化，频繁计算是极其浪费算力资源的做法，尤其是极端行情，其可能造成的滑点之大可以想象。
+  需要注意：清算价格触发仅作为一种理论性“可行性”方案，实际没有任何一个场景会采用清算价格做触发条件，因为只要在多仓的情况下，每个仓位都会因为其它仓位的盈亏以及资金费率等因素导致清算价格发生变化，频繁计算是极其浪费算力资源的做法，尤其是极端行情，其可能造成的滑点之大可以想象。
   业务逻辑：当触发条件触发后，系统会以当前最新价格接管需要清算的仓位并进行清算。
-    清算价格公式：
-    逐仓多头：$$\frac{\text { 名义持仓价值 }- \text { 仓位保证金 }}{\text { 持仓数量 × }(1-\mathrm{MMR})}$$
-    逐仓空头：$$\frac{\text { 名义持仓价值 }+ \text { 仓位保证金 }}{\text { 持仓数量 × }(1+\mathrm{MMR})}$
-    
-
----
+-----------------------------------------------------------------------------------------------------------------------------------------------------------
 - 方案二：账户健康度
   触发条件：账户健康度<=100%。
-补充：100%为最低触发条件，但是一般<120%时就应该提前预警优先分配更多算力进行监测，具体预警位置根据本身交易所的算力情况自行调整。
+  //补充：100%为最低触发条件，但是一般<120%时就应该提前预警优先分配更多算力进行监测，具体预警位置根据本身交易所的算力情况自行调整。
   业务逻辑：当触发条件触发后，系统会以当前最新价格接管需要清算的仓位并进行清算。
   计算公式：
     账户健康度：账户总权益 / 总维持保证金。
     账户总权益：账户钱包余额 + 所有仓位未实现收益。 
-账户钱包余额：此处的账户钱包余额没有包含未实现收益！
-所有仓位未实现收益：用标记价格计算所有仓位的未实现收益。
+    账户钱包余额：此处的账户钱包余额没有包含未实现收益！
+    所有仓位未实现收益：用标记价格计算所有仓位的未实现收益。
     总维持保证金：Σ 单个仓位的维持保证金。
     单个仓位的维持保证金：单个仓位名义持仓价值 * 保证金维持率MMR。
     单个仓位名义持仓价值：开仓数量 * 当前价格。
-当前价格：当前的标记价格。
+    //当前价格：当前的标记价格。
   MMR阶梯规则：
     按Token判断：不同Token的有不同的MMR。
-原因：流动性好的Token在面临极端行情价格波动会相比于流动性小的Token小很多，有更好的抗风险性。
+    //原因：流动性好的Token在面临极端行情价格波动会相比于流动性小的Token小很多，有更好的抗风险性。
     按仓位判断：针对于相同Token，同一用户所持仓的名义价值越高则MMR越高。
-原因：名义持仓价值越高，代表其仓位越大，当出现穿仓时造成的风险即越大。
+    //原因：名义持仓价值越高，代表其仓位越大，当出现穿仓时造成的风险即越大。
 3. 总结一下：
 - 总结二：清算机制对用户越有利，交易所需要承担的风险就会越高，两者本质就是一个对立的关系，而我们的目标就是找到两者的平衡。在过往调研中发现有些交易所对账户健康度的判断不仅采用标价价格，同时还采用最新价格作为计算条件。这么做好处是用户仓位被清算的条件更多了，用户体验提高。但劣势是交易所的风险被无限放大，需要承担更高的可能穿仓风险。 所以我认为这并不是一个非常明智的做法。
 - 总结二：关于MMR的阶梯做的灵活且可以无限适配。我们首先可以对不同的流动性Token采用不同的阶梯思路，而对流动性的判断可以通过盘口点差率进行判断。例如BTC、ETH这类盘口点差率低的Token可以采用较低的MMR阶梯，而一些盘口点差率高的Token采用较高的MMR阶梯思路。那么在区分好不同的阶梯思路后，我们可以发现BTC和ETH的价格区间相差非常大，如果仅仅采用名义持仓价格去划分MMR区间显然不合理，我们可以通过数学函数将他们划分成等同区间，例如现在BTC价格为1W，ETH价格为1K，则BTC名义持仓价值0~100与ETH名义持仓价值0~10的MMR应该一致。
@@ -66,8 +67,8 @@ Qtarget：第一档位的最大持仓数量（或名义价值）。
 
 ADL减仓
 1. 业务逻辑：当极端行情导致清算不及时而造成大规模穿仓情况，保险基金无法承接全部穿仓导致的亏损时将会启动ADL减仓策略，该策略用于保护交易所自有资产不会出现亏损，一般用于合约风控的最后一步。
-1.穿仓：当用户不能承接亏损的资金时，此时即为穿仓。
-2.减仓：可以理解为平台强制将亏损嫁接给用户，但当触发减仓后，首先将会根据当前Token产生的保险基金不能承接的亏损以及根据Token当前的最新价格计算出需要减仓的仓位数量，进行强行扣除。
+//穿仓：当用户不能承接亏损的资金时，此时即为穿仓。
+//减仓：可以理解为平台强制将亏损嫁接给用户，但当触发减仓后，首先将会根据当前Token产生的保险基金不能承接的亏损以及根据Token当前的最新价格计算出需要减仓的仓位数量，进行强行扣除。
 2. 减仓逻辑：
 - 优先级一：首先根据不同Token仓位的未实现收益从大至小进行排序，优先对最高的未实现收益仓位进行减仓。
 - 优先级二：相同或极为接近的未实现收益仓位将会根据其开仓的杠杆大小进行判断，杠杆越大则强制减仓风险越大。
